[package]
name = "pepbut"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "MIT/Apache-2.0"
autobenches = false

[lib]
bench = false

[features]
default = ["nsd"]
nsd = ["clap", "env_logger", "tokio", "tokio-io", "users"]

[[bin]]
name = "pepbut-nsd"
path = "src/nsd.rs"
required-features = ["nsd"]

[[bench]]
name = "bench_main"
harness = false

[profile.release]
lto = true

[dependencies]
bytes = "0.4"
cast = "0.2"
clap = { version = "2.31", optional = true }
env_logger = { version = "0.5", optional = true }
failure = "0.1"
idna = "0.1"
log = "0.4"
rmp = "0.8"
tokio = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
users = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.2"
maplit = "1.0"
