[package]
name = "pepbut"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "MIT/Apache-2.0"
autobenches = false

[lib]
bench = false

[features]
default = ["nsd", "zone-convert"]
nsd = ["clap", "env_logger", "futures", "hyper", "serde_json", "tokio", "tokio-io", "tokio-signal", "tokio-uds", "users"]
zone-convert = ["clap", "trust-dns"]

[[bin]]
name = "pepbut-nsd"
path = "src/nsd.rs"
required-features = ["nsd"]

[[bin]]
name = "pepbut-zone-convert"
path = "src/convert.rs"
required-features = ["zone-convert"]

[[bench]]
name = "bench_main"
harness = false

[profile.release]
lto = true

[dependencies]
bytes = "0.4"
cast = "0.2"
clap = { version = "2.31", optional = true }
env_logger = { version = "0.5", optional = true }
failure = "0.1"
futures = { version = "0.1", optional = true }
hyper = { version = "0.12", optional = true }
idna = "0.1"
log = "0.4"
rmp = "0.8"
serde_json = { version = "1.0", optional = true }
tokio = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }
tokio-signal = { version = "0.2", optional = true }
tokio-uds = { version = "0.2", optional = true }
trust-dns = { version = "0.14", optional = true, default-features = false }
users = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.2"
maplit = "1.0"
