[package]
name = "pepbut"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "AGPL-3.0-only"
autobenches = false

[workspace]
members = ["nsd", "zone-convert"]

[lib]
bench = false

[[bench]]
name = "bench_main"
harness = false

[profile.release]
lto = true

[dependencies]
bytes = "0.4"
cast = "0.2"
failure = "0.1"
idna = "0.1"
log = "0.4"
rmp = "0.8"

[dev-dependencies]
criterion = "0.2"
maplit = "1.0"
