[package]
name = "pepbut-nsd"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]

[dependencies]
bytes = "0.4"
cast = "0.2"
clap = "2.31"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
pepbut = { version = "0.1", path = "../" }
serde_json = "1.0"
tokio = "0.1"
tokio-io = "0.1"
tokio-signal = "0.2"
tokio-uds = "0.2"
users = "0.7"
