[package]
name = "pepbut-nsd"
version = "0.1.0"
authors = ["iliana weller <ilianaw@buttslol.net>"]
license = "AGPL-3.0-only"

[dependencies]
bytes = "0.4"
cast = "0.2"
clap = "2.31"
env_logger = "0.5"
failure = "0.1"
log = "0.4"
pepbut = { version = "0.1", path = "../" }
safeword = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tabwriter = "1.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-jsoncodec = "0.1"
tokio-uds = "0.2"
users = "0.7"
